# fc-mba-prompt-engineering

./: .editorconfig  .env.example  .tool-versions  Makefile  pyproject.toml
ch01_prompts_types/: README.md  p01_role_prompting.py  p02_zero_shot.py  p03_one_few_shot.py  p04_chain_of_thought.py  p04a_chain_of_thought_self_consistency.py  p05_tree_of_thoughts.py  p06_skeleton_of_thought.py  p07_react.py  p08_prompt_chaining.py  p09_least_to_most.py  utils.py
ch02_enriched_prompt/: README.md  p01_no_expansion.py  p02_iter_retgen.py  p03_query_enrichment.py
ch03_prompt_evaluation/: README.md
ch03_prompt_evaluation/p01_basic/: README.md  p01_format_eval.py  p02_criteria_binary_eval.py  p03_criteria_score_eval.py  p04_correctness_eval.py  p05_additional_criteria.py  p06_embedding_distance_eval.py  p07_bad_text_before.py  p08_bad_verbose.py  p09_bad_hallucination.py  p10_bad_not_helpful.py
ch03_prompt_evaluation/p02_precision/: README.md  p01_conservative_high_precision.py  p02_aggressive_high_recall.py  p03_balanced_best_f1.py
ch03_prompt_evaluation/p03_pairwise/: README.md  create_prompts.py  helpers.py  run.py  update_prompts.py
ch03_prompt_evaluation/p04_pairwise_doc/: README.md  create_prompts.py  doc_evaluators.py  helpers.py  run.py
ch03_prompt_evaluation/p04_pairwise_doc/prompts/: prompt_doc_b.yaml
ch03_prompt_evaluation/shared/: README.md  clients.py  datasets.py  evaluators.py  parsers.py  prompts.py
ch03_prompt_evaluation/utils/: README.md  metrics.py  reset.py  upload.py
