[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "jsonschema>=4.26.0",
  "langchain",
  "langchain-openai",
  "langfuse>=4.0.6",
  "python-dotenv",
  "rich",
]

[dependency-groups]
dev = [
  "ipykernel",
  "ipython",
  "mypy",
  "mypy-extensions",
  "ruff",
]

# ------------------------------------------------------
# Mypy
# ------------------------------------------------------

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true

# ------------------------------------------------------
# Ruff
# ------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort (ordenação de imports)
# W: pycodestyle warnings
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ------------------------------------------------------
# Pylint
# ------------------------------------------------------

[tool.pylint.main]
py-version = "3.13"
jobs = 0
ignore-patterns = ["test_.*\\.py"]
extension-pkg-allow-list = ["pyodbc"]

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  "duplicate-code",
  "missing-module-docstring",
]

[tool.pylint.basic]
# Permite:
# - _ (descartáveis)
# - i, j, k (loops)
# - TEntity, TId, TSearch (Type Parameters - PEP 695)
good-names-rgx = "^(_|i|j|k|T[A-Z][a-zA-Z0-9]*)$"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
variable-naming-style = "snake_case"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"

[tool.pylint.design]
min-public-methods = 1
max-attributes = 30

[tool.pylint.typecheck]
ignore-none = true
ignore-mixin-members = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.reports]
reports = false
output-format = "colorized"

# ------------------------------------------------------
# Pytest
# ------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = "."
python_files = "tests.py tests_*.py *tests.py test.py *_test.py test_*.py"
addopts = "-v --import-mode=importlib"
testpaths = "tests"
filterwarnings = [
  "ignore:Cannot correctly sort tables:sqlalchemy.exc.SAWarning",
  "ignore:Accessing argon2._version_:DeprecationWarning",
  "ignore:pandas only supports SQLAlchemy connectable:UserWarning",
  "ignore:The behavior of DataFrame concatenation:FutureWarning",
  "ignore::ResourceWarning",
]
